--- a/POS/POS.csproj
+++ b/POS/POS.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\POS.Models\POS.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\employee\photo\" />
+  </ItemGroup>
+
 </Project>
